--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,7 +11,7 @@ services:
       - ./addons:/mnt/extra-addons
     # Bypass entrypoint to prevent Odoo server from starting automatically
     # Uncomment the following line to keep container running without starting Odoo
-    # entrypoint: ["tail", "-f", "/dev/null"]
+    entrypoint: ["tail", "-f", "/dev/null"]
 
   postgres:
     image: postgres:18
